Security/ejemplos/iptables-ejemploVPNLAN
# Generated by iptables-save v1.4.16.3 on Wed Dec 12 22:07:52 2012
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [59:4845]
:POSTROUTING ACCEPT [59:4845]
-A PREROUTING -i eth1:CONCEPCION -p tcp -m tcp --dport 3306 -j DNAT --to-destination 10.10.0.100:3306
COMMIT
# Completed on Wed Dec 12 22:07:52 2012
# Generated by iptables-save v1.4.16.3 on Wed Dec 12 22:07:52 2012
*filter
:INPUT ACCEPT [19:4191]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1568:299850]
-A INPUT -s 10.10.0.0/32 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 10.10.10.0/32 -i eth1 -j ACCEPT
-A INPUT -s 10.10.10.0/32 -i eth1:CONCEPCION -j ACCEPT
-A FORWARD -s 10.10.2.0/32 -i eth1:CONCEPCION -o wlan0 -p tcp -m tcp --dport 3306 -j ACCEPT
-A FORWARD -s 10.10.10.0/32 -i eth1 -p tcp -m tcp --dport 3306 -j ACCEPT
-A FORWARD -s 10.10.10.0/32 -i eth1:CONCEPCION -p tcp -m tcp --dport 3306 -j ACCEPT
COMMIT
# Completed on Wed Dec 12 22:07:52 2012
